Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117459

windeployqt: Explicitly disabled plugins are still deployed

XMLWordPrintable

    • a1e052a29 (dev), 330d05eab (6.6)

      windeployqt deploys things that have explicitly been disabled, in particular virtualkeyboard and qmltooling.

      To reprocude: Create a QtQuick app in QtCreator from the template. Build it, then run

      $ windeployqt-qt6 --qml --qmldir <srcdir> --no-virtualkeyboard --dir out/ <exe>
      $ find out/ -iname "*virtualkeyboard*" -or -iname "*vkb*" -or -iname "*qmltooling*"
      out/qml/QtQuick/VirtualKeyboard
      out/qml/QtQuick/VirtualKeyboard/Plugins/Hangul/qtvkbhangulplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Plugins/TCIme/qtvkbtcimeplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Plugins/Pinyin/qtvkbpinyinplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Plugins/qtvkbpluginsplugin.qmltypes
      out/qml/QtQuick/VirtualKeyboard/Plugins/qtvkbpluginsplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Plugins/Thai/qtvkbthaiplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Plugins/OpenWNN/qtvkbopenwnnplugin.dll
      out/qml/QtQuick/VirtualKeyboard/qtvkbplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Components/qtvkbcomponentsplugin.qmltypes
      out/qml/QtQuick/VirtualKeyboard/Components/qtvkbcomponentsplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Layouts/qtvkblayoutsplugin.qmltypes
      out/qml/QtQuick/VirtualKeyboard/Layouts/qtvkblayoutsplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Styles/Builtin/qtvkbbuiltinstylesplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Styles/qtvkbstylesplugin.dll
      out/qml/QtQuick/VirtualKeyboard/Settings/qtvkbsettingsplugin.dll
      out/qmltooling
      

      In this particular instance, it at least does not deploy Qt6VirtualKeyboard.dll, but in our more complex application it does, even though --no-virtualkeyboard is specified.
      qmltooling should also be disabled; it's in the default value for --skip-plugin-types.

      This must have regressed from Qt5 to Qt6; it has worked fine with Qt5.

      Since VirtualKeyboard is licensed as GPL, this might inadvertently lead to deploying GPL'd modules that have explicitly been disabled so as to only ship LGPL stuff.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            msarehn Arno Rehn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes